# malloc-craft

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  THREADING_OPTIMIZATION_PLAN.md
include/: asset.h  biome.h  block.h  block_models.h  block_renderer.h  block_types.h  blockbench_loader.h  blockbench_renderer.h  buffer.h  camera.h  chunk.h  chunk_mesh.h  fbo.h  foliage_renderer.h  framebuffer.h  game_data.h  hashmap.h  input.h  liquid_renderer.h  mesh.h  mesh_sort_queue.h  noise.h  player.h  player_instance.h  queue.h  render.h  settings.h  shader.h  shadow_map.h  skybox.h  solid_renderer.h  sun.h  texture.h  tree.h  util.h  vao.h  vbo.h  water.h  window.h  world.h  (+2 more)
include/cerealize/: cerealize.h
include/cerialize/: cerialize.h
include/glad/: glad.h
include/server/: client.h  models.h  server.h
res/: atlas.xcf  biomes.json  blocks.json  player.json  settings.json  settings.profiler.json  trees.json  ui.json
res/blockbench/: cube.json  forge.json  player.json  sigma.bbmodel  sigma.json  stair.bbmodel  stair.json  texture.xcf  torch.json  torch_side.json
res/shaders/: blockbench.frag  blockbench.vert  foliage.frag  foliage.vert  liquid.frag  liquid.vert  outline.frag  reflection.frag  reflection.vert  shader.frag  shader.vert  shadow.vert  skybox.frag  skybox.vert  sun.frag  sun.vert  ui.frag  ui.vert  world.frag  world.vert
res/xcf/: atlas.xcf  bump_map.xcf  caustic.xcf  skybox.xcf
src/: asset.c  biome.c  biome.h  block.c  block.h  block_renderer.c  block_renderer.h  block_types.c  blockbench_loader.c  blockbench_renderer.c  buffer.c  camera.c  chunk.c  chunk.h  chunk_mesh.c  fbo.c  fbo.h  foliage_renderer.c  framebuffer.c  game_input.c  input.c  input.h  liquid_renderer.c  main.c  mesh.c  mesh_sort_queue.c  noise.c  noise.h  outline_renderer.c  outline_renderer.h  player.c  player_instance.c  queue.c  reflection_map.c  reflection_map.h  render.c  settings.c  shader.c  shadow_map.c  skybox.c  (+13 more)
src/glad/: glad.c
src/server/: client.c  client.h  server.c  server.h
src/ui/: ui_renderer.c  ui_renderer.h
src/util/: core.c  core.h  metrics.c  metrics.h  settings.c  settings.h  sort.c  (+1 more)
tmp/: lab6.html  lab6.js
(+86 files in other folders)
